fix registration form gaps

--- a/src/pages/users/userRegistration/UserRegistration.css
+++ b/src/pages/users/userRegistration/UserRegistration.css
@@ -1,6 +1,7 @@
-.registrationForm {
+.userForm {
     display: flex;
     flex-direction: column;
     height: 80vh;
     justify-content: space-between;
+    gap: 16px;
 }
